# note-guard

./: .env-example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: exceptions.py  main.py  models.py
app/api/: deps.py  main.py
app/api/routes/: auth.py  notes.py  users.py
app/core/: config.py  db.py  users.py
app/migrations/: env.py
app/migrations/versions/: 36f10ac9f4b2_initial_migration.py
app/repositories/: __init__.py  notes.py
app/schemas/: __init__.py  notes.py
app/services/: __init__.py  notes.py
app/utils/: speller.py
